--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "AnchorRegression"]
+	path = AnchorRegression
+	url = https://github.com/simzim96/anchorregression
+	shallow = true
+	registered = true
